# godgal

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  SConstruct  TODO.txt  godgal.code-workspace  project.godot  pull_request_template.md  rebuild_win_x64.ps1  update_repository.ps1
Assets/AlienUFOPack/: dome.png.import  laserBeige3.png.import  laserBlue2.png.import  laserBlue_burst.png.import  laserGreen1.png.import  laserGreen2.png.import  laserGreen3.png.import  laserGreen_burst.png.import  laserPink1.png.import  laserPink_burst.png.import  laserPink_groundBurst.png.import  laserYellow2.png.import  laserYellow3.png.import  shipBeige.png.import  shipBeige_damage1.png.import  shipBeige_manned.png.import  shipBlue.png.import  shipBlue_damage1.png.import  shipBlue_manned.png.import  shipGreen_damage1.png.import  shipPink.png.import  shipPink_damage1.png.import  shipPink_manned.png.import  shipYellow.png.import  shipYellow_damage2.png.import  shipYellow_manned.png.import
Escenas/: Main.tscn  Star.tscn
PS_Scripts/: install_commands.ps1  rebuild_win_x64.ps1  update_repository.ps1
Scripts/: Main.gd  Star.gd
project/: project.godot
project/Assets/AlienUFOPack/: laserBeige1.png.import  laserBeige2.png.import  laserBeige_burst.png.import  laserBeige_groundBurst.png.import  laserBlue1.png.import  laserBlue3.png.import  laserBlue_groundBurst.png.import  laserGreen_groundBurst.png.import  laserPink2.png.import  laserPink3.png.import  laserYellow1.png.import  laserYellow_burst.png.import  laserYellow_groundBurst.png.import  shipBeige_damage2.png.import  shipBlue_damage2.png.import  shipGreen.png.import  shipGreen_damage2.png.import  shipGreen_manned.png.import  shipPink_damage.png.import  (+1 more)
project/Escenas/: Main.tscn  Star.tscn
project/Scripts/: Main.gd  Star.gd
src/: cgalexample.cpp  gdexample.cpp  gdexample.h  gdlibrary.cpp
(+1 files in other folders)
